--- a/anabeesh/build.gradle
+++ b/anabeesh/build.gradle
@@ -1,32 +1,89 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply from: "$project.rootDir/tools/gradle/script/git-version.gradle"
+apply from: "$project.rootDir/tools/gradle/script/quality.gradle"
+apply from: "$project.rootDir/tools/gradle/script/java-code-coverage.gradle"
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion deps.build.compileSdkVersion
+    buildToolsVersion deps.build.buildToolsVersion
+
     defaultConfig {
         applicationId "com.rxmuhammadyoussef.anabeesh"
-        minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion deps.build.minSdkVersion
+        targetSdkVersion deps.build.targetSdkVersion
+        versionCode deps.build.versionCode
+        versionName deps.build.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), "$project.rootDir/tools/proguard/rules-proguard.pro"
         }
+
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), "$project.rootDir/tools/proguard/rules-proguard-debug.pro"
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
+    // UI
+    implementation deps.support.design
+    implementation deps.support.recyclerview
+    implementation deps.support.constraintLayout
+    implementation deps.view.circleimageview
+
+    // Arch Component
+    implementation deps.architecturecomponents.lifecycles
+
+    // Rx
+    implementation deps.rx.java
+    implementation deps.rx.relay
+    implementation deps.rx.android
+    implementation deps.rx.binding
+
+    // Dependency Injection
+    implementation deps.dependencyInjection.dagger
+    kapt deps.dependencyInjection.daggerCompiler
+
+    // View Binding
+    implementation deps.viewBinding.butterknife
+    kapt deps.viewBinding.butterknifeCompiler
+
+    // Images
+    implementation deps.image.glide
+    kapt deps.image.glideCompiler
+
+    // Network
+    implementation deps.network.retrofit
+    implementation deps.network.retrofitGsonConverter
+
+    // Log
+    implementation deps.log.timber
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    configurations.all {
+        resolutionStrategy {
+            force deps.support.annotations
+        }
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex')) {
+                details.useVersion "27.0.2"
+            }
+        }
+    }
 }
