--- a/anabeesh/build.gradle
+++ b/anabeesh/build.gradle
@@ -72,6 +72,11 @@ dependencies {
     // Log
     implementation deps.log.timber
 
+    // Testing
+    testImplementation deps.test.junit
+    androidTestImplementation deps.test.runner
+    androidTestImplementation deps.test.espresso
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
