--- a/anabeesh/src/main/AndroidManifest.xml
+++ b/anabeesh/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest package="com.rxmuhammadyoussef.anabeesh"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".AnabeeshApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
