--- a/anabeesh/src/main/AndroidManifest.xml
+++ b/anabeesh/src/main/AndroidManifest.xml
@@ -10,5 +10,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".ui.landingpage.LandingPageActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/LandingPageTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/login"
+            android:screenOrientation="portrait"
+            android:theme="@style/LoginTheme"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+    </application>
 </manifest>
