--- a/tools/gradle/dependencies.gradle
+++ b/tools/gradle/dependencies.gradle
@@ -8,12 +8,14 @@ def build = [
 ]
 
 def versions = [
-        support    : '27.0.2',
-        dagger     : '2.11',
-        butterKnife: '8.6.0',
-        glide      : '4.3.0',
-        timber     : '4.5.1',
-        retrofit   : '2.2.0'
+        support           : '27.0.2',
+        dagger            : '2.11',
+        butterKnife       : '8.6.0',
+        glide             : '4.3.0',
+        timber            : '4.5.1',
+        retrofit          : '2.2.0',
+        googlePlayServices: '11.8.0',
+        leakCanary        : '1.5.4',
 ]
 
 def support = [
@@ -22,6 +24,17 @@ def support = [
         recyclerview    : "com.android.support:recyclerview-v7:${versions.support}",
         cardview        : "com.android.support:cardview-v7:${versions.support}",
         constraintLayout: 'com.android.support.constraint:constraint-layout:1.0.2'
+]
+
+def googlePlayServices = [
+        maps    : "com.google.android.gms:play-services-maps:${versions.googlePlayServices}",
+        location: "com.google.android.gms:play-services-location:${versions.googlePlayServices}",
+        places  : "com.google.android.gms:play-services-places:${versions.googlePlayServices}",
+]
+
+def utility = [
+        dexeterPermissionManager: "com.karumi:dexter:4.2.0",
+        mapsRouteDrawer         : "com.github.jd-alexander:library:1.1.0",
 ]
 
 def rx = [
@@ -38,8 +51,11 @@ def network = [
 ]
 
 def dependencyInjection = [
-        dagger        : "com.google.dagger:dagger:${versions.dagger}",
-        daggerCompiler: "com.google.dagger:dagger-compiler:${versions.dagger}",
+        dagger               : "com.google.dagger:dagger:${versions.dagger}",
+        daggerCompiler       : "com.google.dagger:dagger-compiler:${versions.dagger}",
+        daggerAndroid        : "com.google.dagger:dagger-android:${versions.dagger}",
+        daggerSupportAndroid : "com.google.dagger:dagger-android-support:${versions.dagger}",
+        daggerAndroidCompiler: "com.google.dagger:dagger-android-processor:${versions.dagger}",
 ]
 
 def viewBinding = [
@@ -59,7 +75,9 @@ def test = [
 ]
 
 def log = [
-        timber: "com.jakewharton.timber:timber:${versions.timber}"
+        timber           : "com.jakewharton.timber:timber:${versions.timber}",
+        leakCanaryDebug  : "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}",
+        leakCanaryRelease: "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakCanary}"
 ]
 
 def view = [
@@ -91,4 +109,6 @@ ext.deps = [
         test                  : test,
         social                : social,
         architecturecomponents: architecturecomponents,
+        googlePlayServices    : googlePlayServices,
+        utility               : utility,
 ]
