--- a/anabeesh/src/main/AndroidManifest.xml
+++ b/anabeesh/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.landingpage.LandingPageActivity"
+            android:name=".ui.splash.SplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/LandingPageTheme">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +23,13 @@
         </activity>
         <activity
             android:name=".ui.login.LoginActivity"
-            android:label="@string/login"
             android:screenOrientation="portrait"
             android:theme="@style/LoginTheme"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity
+            android:name=".ui.registration.RegistrationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/RegistrationTheme"
             android:windowSoftInputMode="stateHidden|adjustPan" />
     </application>
 </manifest>
