--- a/anabeesh/build.gradle
+++ b/anabeesh/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation deps.support.recyclerview
     implementation deps.support.constraintLayout
     implementation deps.view.circleimageview
+    implementation(deps.view.materialdrawer) {
+        transitive = true
+    }
 
     // Arch Component
     implementation deps.architecturecomponents.lifecycles
@@ -58,6 +61,8 @@ dependencies {
     // Dependency Injection
     implementation deps.dependencyInjection.dagger
     implementation deps.dependencyInjection.daggerSupportAndroid
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:27.1.0'
     kapt deps.dependencyInjection.daggerCompiler
     kapt deps.dependencyInjection.daggerAndroidCompiler
 
