--- a/tools/gradle/dependencies.gradle
+++ b/tools/gradle/dependencies.gradle
@@ -82,7 +82,8 @@ def log = [
 
 def view = [
         pinview        : "com.alimuzaffar.lib:pinentryedittext:1.3.1",
-        circleimageview: "de.hdodenhof:circleimageview:2.2.0"
+        circleimageview: "de.hdodenhof:circleimageview:2.2.0",
+        materialdrawer : "com.mikepenz:materialdrawer:5.9.5@aar",
 ]
 
 def social = [
