--- a/tools/gradle/dependencies.gradle
+++ b/tools/gradle/dependencies.gradle
@@ -1,5 +1,5 @@
 def build = [
-        buildToolsVersion: '27.0.2',
+        buildToolsVersion: '27.0.3',
         compileSdkVersion: 27,
         minSdkVersion    : 21,
         targetSdkVersion : 27,
@@ -38,11 +38,12 @@ def utility = [
 ]
 
 def rx = [
-        binding  : "com.jakewharton.rxbinding2:rxbinding:2.0.0",
-        java     : "io.reactivex.rxjava2:rxjava:2.0.5",
-        android  : "io.reactivex.rxjava2:rxandroid:2.0.1",
-        relay    : "com.jakewharton.rxrelay2:rxrelay:2.0.0",
-        Paparazzo: "com.github.miguelbcr:RxPaparazzo:0.6.0-2.x",
+        binding        : "com.jakewharton.rxbinding2:rxbinding:2.0.0",
+        java           : "io.reactivex.rxjava2:rxjava:2.0.5",
+        android        : "io.reactivex.rxjava2:rxandroid:2.0.1",
+        relay          : "com.jakewharton.rxrelay2:rxrelay:2.0.0",
+        Paparazzo      : "com.github.miguelbcr:RxPaparazzo:0.6.0-2.x",
+        retrofitAdapter: "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0",
 ]
 
 def network = [
@@ -77,7 +78,8 @@ def test = [
 def log = [
         timber           : "com.jakewharton.timber:timber:${versions.timber}",
         leakCanaryDebug  : "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}",
-        leakCanaryRelease: "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakCanary}"
+        leakCanaryRelease: "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakCanary}",
+        ANRWatchDog      : "com.github.anrwatchdog:anrwatchdog:1.3.0",
 ]
 
 def view = [
