--- a/tools/gradle/dependencies.gradle
+++ b/tools/gradle/dependencies.gradle
@@ -83,9 +83,10 @@ def log = [
 ]
 
 def view = [
-        pinview        : "com.alimuzaffar.lib:pinentryedittext:1.3.1",
-        circleimageview: "de.hdodenhof:circleimageview:2.2.0",
-        materialdrawer : "com.mikepenz:materialdrawer:5.9.5@aar",
+        pinview         : "com.alimuzaffar.lib:pinentryedittext:1.3.1",
+        circleimageview : "de.hdodenhof:circleimageview:2.2.0",
+        materialdrawer  : "com.mikepenz:materialdrawer:5.9.5@aar",
+        roundedImageView: "com.makeramen:roundedimageview:2.3.0",
 ]
 
 def social = [
