--- a/anabeesh/src/main/AndroidManifest.xml
+++ b/anabeesh/src/main/AndroidManifest.xml
@@ -38,6 +38,18 @@
             android:screenOrientation="portrait"
             android:theme="@style/HostTheme"
             android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity
+            android:name=".ui.article.ArticleActivity"
+            android:label=""
+            android:screenOrientation="portrait"
+            android:theme="@style/HostTheme"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity
+            android:name=".ui.articledetails.ArticleDetailsActivity"
+            android:label=""
+            android:screenOrientation="portrait"
+            android:theme="@style/HostTheme"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
     </application>
 
 </manifest>
