--- a/anabeesh/build.gradle
+++ b/anabeesh/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     // Dependency Injection
     implementation deps.dependencyInjection.dagger
     implementation deps.dependencyInjection.daggerSupportAndroid
+    implementation 'com.android.support:support-v4:27.1.0'
     kapt deps.dependencyInjection.daggerCompiler
     kapt deps.dependencyInjection.daggerAndroidCompiler
 
